# sast

./: .gitignore  .semgrepignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
rules/semgrep/: cpp-security.yaml
src/: cli.rs  config.rs  main.rs  model.rs  runner.rs
src/output/: html.rs  json.rs  mod.rs  native.rs  sarif.rs
src/tools/: cppcheck.rs  generic.rs  mod.rs  scan_build.rs  semgrep.rs
tests/: integration.rs
tests/fixtures/cpp_project/: buffer_overflow.cpp  format_string.cpp  memory_issues.cpp
